objects/Fund__c.object
<CustomObject>
    <description>Fund object created for private equity use cases</description>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Invest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Invest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Committed_Capital__c</fullName>
        <label>Committed Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Fund_EIN__c</fullName>
        <label>Fund EIN</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Management_Fee__c</fullName>
        <label>Management Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Target_Size__c</fullName>
        <label>Target Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Term__c</fullName>
        <label>Term (in years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Total_Investments_Ma__c</fullName>
        <label>Total Investments Made</label>
        <summarizedField>FINS_Investment__c.FINS_Private_Equity_Amount__c</summarizedField>
        <summaryForeignKey>FINS_Investment__c.FINS_Private_Equity_Fund__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Formation_Date__c</fullName>
        <label>Formation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Info__c</fullName>
        <label>Fund Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fund_Target_Amount__c</fullName>
        <label>Fund Target Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund_Type__c</fullName>
        <label>Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Distressed</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Fund of Funds</fullName>
                </value>
                <value>
                    <fullName>Hedge</fullName>
                </value>
                <value>
                    <fullName>Mutual</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Secondaries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fundraising_Pipeline__c</fullName>
        <label>Fundraising Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fundraising_Status__c</fullName>
        <label>Fundraising Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepting New Capital</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invested__c</fullName>
        <label>$ Invested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Investors__c</fullName>
        <label>Number of Investors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <label>Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Deals__c</fullName>
        <label>Pending Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_to_Goal__c</fullName>
        <label>$ Remaining to Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inception</fullName>
                </value>
                <value>
                    <fullName>Fundraise in Progress</fullName>
                </value>
                <value>
                    <fullName>Investing</fullName>
                </value>
                <value>
                    <fullName>Liquidating</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Deals_Invested__c</fullName>
        <label># of Deals Invested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Fund_Target_Amount__c</columns>
        <columns>Invested__c</columns>
        <columns>of_Deals_Invested__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>